Updated search results

--- a/index.html
+++ b/index.html
@@ -130,8 +130,10 @@
             target="_blank"
             href="https://twitter.com/jonasschmedtman"
             >Jonas Schmedtmann</a
-          >. Use for learning or your portfolio. Don't use to teach. Don't claim
-          as your own.
+          >Re created by
+          <a class="twitter-link" target="_blank" href="tomer-almog.com"
+            >Tomer Almog</a
+          >
         </p>
       </div>
 
