--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             href="https://twitter.com/jonasschmedtman"
             >Jonas Schmedtmann</a
           >Re created by
-          <a class="twitter-link" target="_blank" href="tomer-almog.com"
+          <a class="twitter-link" target="_blank" href="https://tomer-almog.com"
             >Tomer Almog</a
           >
         </p>
