--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
             target="_blank"
             href="https://twitter.com/jonasschmedtman"
             >Jonas Schmedtmann</a
-          >Re created by
+          >
+          Re created by
           <a class="twitter-link" target="_blank" href="https://tomer-almog.com"
             >Tomer Almog</a
           >
